2.7.0 (01-07-2024)
- Refactor: Uses ExcelUtil to handle excel files [#qubIT-Omnis-6065]

2.6.0 (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]

2.5.3 (29-12-2023)
- Refactor: Remove references to shift types [#qubIT-Fenix-1587]
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

2.5.2 (31-10-2023)
- Refactor: Replacing uses of Strings from repackage google commons for StringUtils from commons-lang3 [#qubIT-Fenix-4501]

2.5.1 (06-07-2023)
- Refactor: Make compatible with latest version of academic-core

2.5.0 (18-10-2022)
- Refactor: Remove unused Struts module configuration 

2.4.0 (13-11-2020)
- New feature: Support for Java 11
- Refactor: Remove usage of deprecated method Degree.findDegreeCurricularPlan(LocalizedString)

2.3.1 (05-02-2020)
- Refactor: upgraded fenixedu-academic-core and fenixedu-ulisboa-specifications dependencies 

2.3.0 (18-12-2019)
- Refactor: change usage of ExecutionSemester to ExecutionInterval

2.2.2 (26-07-2019)
